--- a/Kitodo/pom.xml
+++ b/Kitodo/pom.xml
@@ -37,11 +37,6 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.kitodo</groupId>
-            <artifactId>kitodo-api</artifactId>
-            <version>3.0-SNAPSHOT</version>
-        </dependency>
-        <dependency>
             <groupId>org.apache.tomcat</groupId>
             <artifactId>tomcat-servlet-api</artifactId>
             <version>${tomcat.version}</version>
@@ -50,6 +45,11 @@
         <dependency>
             <groupId>org.kitodo</groupId>
             <artifactId>kitodo-data-management</artifactId>
+            <version>3.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.kitodo</groupId>
+            <artifactId>kitodo-ugh</artifactId>
             <version>3.0-SNAPSHOT</version>
         </dependency>
         <dependency>
