--- a/Kitodo-Command/pom.xml
+++ b/Kitodo-Command/pom.xml
@@ -49,6 +49,19 @@
     <build>
         <plugins>
             <plugin>
+                <groupId>org.pitest</groupId>
+                <artifactId>pitest-maven</artifactId>
+                <version>1.3.2</version>
+                <configuration>
+                    <targetClasses>
+                        <param>org.kitodo.command*</param>
+                    </targetClasses>
+                    <targetTests>
+                        <param>org.kitodo.command*</param>
+                    </targetTests>
+                </configuration>
+            </plugin>
+            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
                 <version>2.3.1</version>
