Transform project archived state to project active state and unify displayed information in list and edit views

--- a/Kitodo/src/main/resources/mapping.json
+++ b/Kitodo/src/main/resources/mapping.json
@@ -127,7 +127,7 @@
         "project": {
             "dynamic": "strict",
             "properties": {
-                "archived": {
+                "active": {
                     "type": "boolean"
                 },
                 "endDate": {
@@ -317,7 +317,7 @@
                         "id": {
                             "type": "long"
                         },
-                        "archived": {
+                        "active": {
                             "type": "boolean"
                         },
                         "title": {
