Add tests for ConfigCore

--- a/Kitodo/src/test/resources/kitodo_config.properties
+++ b/Kitodo/src/test/resources/kitodo_config.properties
@@ -28,3 +28,5 @@ elasticsearch.index=testindex
 elasticsearch.useAuthentication=false
 KonfigurationVerzeichnis=src/test/resources/
 dir_Users=src/test/resources/
+
+longParameter=2
