--- a/.travis.yml
+++ b/.travis.yml
@@ -42,6 +42,7 @@ before_script:
   - mysql -u root -e "CREATE USER 'kitodo'@'localhost' IDENTIFIED BY 'kitodo';"
   - mysql -u root -e "GRANT ALL ON kitodo.* TO 'kitodo'@'localhost';"
   - mysql -u root kitodo < Kitodo/setup/schema.sql
+  - mysql -u root kitodo < Kitodo/setup/default.sql
   - export DISPLAY=:99.0
   - "sh -e /etc/init.d/xvfb start"
   - sleep 3 # give xvfb some time to start
