--- a/Kitodo/src/main/webapp/WEB-INF/web.xml
+++ b/Kitodo/src/main/webapp/WEB-INF/web.xml
@@ -1,17 +1,16 @@
 <?xml version="1.0"?>
-
 <!--
-    * Copyright 2004 The Apache Software Foundation. * * Licensed under
-    the Apache License, Version 2.0 (the "License"); * you may not use
-    this file except in compliance with the License. * You may obtain a
-    copy of the License at * * http://www.apache.org/licenses/LICENSE-2.0
-    * * Unless required by applicable law or agreed to in writing,
-    software * distributed under the License is distributed on an "AS IS"
-    BASIS, * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express
-    or implied. * See the License for the specific language governing
-    permissions and * limitations under the License.
+ *
+ * (c) Kitodo. Key to digital objects e. V. <contact@kitodo.org>
+ *
+ * This file is part of the Kitodo project.
+ *
+ * It is licensed under GNU General Public License version 3 or later.
+ *
+ * For the full copyright and license information, please read the
+ * GPL3-License.txt file that was distributed with this source code.
+ *
 -->
-
 <web-app version="3.0" xmlns="http://java.sun.com/xml/ns/javaee"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/j2ee/web-app_3_0.xsd">
