--- a/Kitodo/pom.xml
+++ b/Kitodo/pom.xml
@@ -204,6 +204,11 @@
             <version>2.3</version>
         </dependency>
         <dependency>
+            <groupId>org.camunda.bpm.model</groupId>
+            <artifactId>camunda-bpmn-model</artifactId>
+            <version>7.8.0</version>
+        </dependency>
+        <dependency>
             <groupId>org.quartz-scheduler</groupId>
             <artifactId>quartz</artifactId>
             <version>1.8.6</version>
