Add diagram directory to kitodo config properties

--- a/Kitodo/src/main/resources/kitodo_config.properties
+++ b/Kitodo/src/main/resources/kitodo_config.properties
@@ -45,6 +45,8 @@ dir_Users=/home/
 # Absolute path to a folder the application can temporarily create files in,
 # terminated by a directory separator ("/").
 tempfolder=/usr/local/kitodo/tmp/
+
+diagramsFolder=/usr/local/kitodo/diagrams/
 # -----------------------------------
 # Directory management
 # -----------------------------------
