--- a/Kitodo/src/test/resources/kitodo_config.properties
+++ b/Kitodo/src/test/resources/kitodo_config.properties
@@ -13,6 +13,7 @@
 # The servlet container must have write permission to that directory.
 MetadatenVerzeichnis=src/test/resources/
 RegelsaetzeVerzeichnis=src/test/resources/
+diagramsFolder=src/test/resources/diagrams/
 # Script to create the directory for a new process
 script_createDirMeta=src/test/resources/scripts/script_createDirMeta.sh
 script_createDirUserHome=src/test/resources/scripts/script_createDirUserHome.sh
