--- a/Kitodo-DataManagement/src/main/resources/db/config/flyway.properties
+++ b/Kitodo-DataManagement/src/main/resources/db/config/flyway.properties
@@ -1,4 +1,4 @@
 flyway.user=kitodo
 flyway.password=kitodo
-flyway.url=jdbc:mysql://localhost/kitodo
+flyway.url=jdbc:mysql://localhost/kitodo?useSSL=false
 flyway.locations=filesystem:../Kitodo-DataManagement/src/main/resources/db/migration
