--- a/Kitodo-DataEditor/pom.xml
+++ b/Kitodo-DataEditor/pom.xml
@@ -25,7 +25,7 @@
     <dependencies>
         <dependency>
             <groupId>org.kitodo</groupId>
-            <artifactId>kitodo-fileformat-metsmodskitodo</artifactId>
+            <artifactId>kitodo-dataformat</artifactId>
             <version>3.0-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
@@ -45,10 +45,10 @@
                 <version>1.3.2</version>
                 <configuration>
                     <targetClasses>
-                        <param>org.kitodo.fileformat*</param>
+                        <param>org.kitodo.dataeditor*</param>
                     </targetClasses>
                     <targetTests>
-                        <param>org.kitodo.fileformat*</param>
+                        <param>org.kitodo.dataeditor*</param>
                     </targetTests>
                 </configuration>
             </plugin>
