--- a/Kitodo-DataEditor/pom.xml
+++ b/Kitodo-DataEditor/pom.xml
@@ -25,6 +25,12 @@
     <dependencies>
         <dependency>
             <groupId>org.kitodo</groupId>
+            <artifactId>kitodo-api</artifactId>
+            <version>3.0-SNAPSHOT</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.kitodo</groupId>
             <artifactId>kitodo-data-format</artifactId>
             <version>3.0-SNAPSHOT</version>
             <scope>provided</scope>
