--- a/Kitodo-DataEditor/pom.xml
+++ b/Kitodo-DataEditor/pom.xml
@@ -20,12 +20,12 @@
 
     <modelVersion>4.0.0</modelVersion>
     <name>Kitodo - Data Editor</name>
-    <artifactId>kitodo-dataeditor</artifactId>
+    <artifactId>kitodo-data-editor</artifactId>
 
     <dependencies>
         <dependency>
             <groupId>org.kitodo</groupId>
-            <artifactId>kitodo-dataformat</artifactId>
+            <artifactId>kitodo-data-format</artifactId>
             <version>3.0-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
