--- a/Kitodo-DataFormat/pom.xml
+++ b/Kitodo-DataFormat/pom.xml
@@ -33,18 +33,76 @@
     <build>
         <plugins>
             <plugin>
+                <!--Download xsd for mets and mods-->
+                <groupId>com.googlecode.maven-download-plugin</groupId>
+                <artifactId>download-maven-plugin</artifactId>
+                <version>1.3.0</version>
+                <executions>
+                    <execution>
+                        <id>mets</id>
+                        <phase>generate-sources</phase>
+                        <goals>
+                            <goal>wget</goal>
+                        </goals>
+                        <configuration>
+                            <url>http://www.loc.gov/standards/mets/mets.xsd</url>
+                            <outputFileName>mets.xsd</outputFileName>
+                            <outputDirectory>${project.build.directory}/downloaded-sources/xsd</outputDirectory>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>mods</id>
+                        <phase>generate-sources</phase>
+                        <goals>
+                            <goal>wget</goal>
+                        </goals>
+                        <configuration>
+                            <url>http://www.loc.gov/standards/mods/mods-3-7.xsd</url>
+                            <outputFileName>mods-3-7.xsd</outputFileName>
+                            <outputDirectory>${project.build.directory}/downloaded-sources/xsd</outputDirectory>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <!--copy kitodo xsd to target folder-->
+            <plugin>
+                <artifactId>maven-resources-plugin</artifactId>
+                <version>3.0.2</version>
+                <executions>
+                    <execution>
+                        <id>copy-files-on-build</id>
+                        <phase>generate-sources</phase>
+                        <goals>
+                            <goal>copy-resources</goal>
+                        </goals>
+                        <configuration>
+                            <outputDirectory>${project.build.directory}/downloaded-sources/xsd</outputDirectory>
+                            <resources>
+                                <resource>
+                                    <directory>src/main/resources/xsd</directory>
+                                    <include>*.xsd</include>
+                                    <filtering>false</filtering>
+                                </resource>
+                            </resources>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <!--generate classes-->
+            <plugin>
                 <groupId>org.jvnet.jaxb2.maven2</groupId>
                 <artifactId>maven-jaxb2-plugin</artifactId>
                 <version>0.13.3</version>
                 <executions>
                     <execution>
+                        <phase>process-sources</phase>
                         <id>metsModsKitodo</id>
                         <goals>
                             <goal>generate</goal>
                         </goals>
                         <configuration>
                             <extension>true</extension>
-                            <schemaDirectory>src/main/resources/xsd</schemaDirectory>
+                            <schemaDirectory>target/downloaded-sources/xsd</schemaDirectory>
                             <schemaIncludes>
                                 <include>mods-3-7.xsd</include>
                                 <include>mets.xsd</include>
