--- a/Kitodo-DataFormat/pom.xml
+++ b/Kitodo-DataFormat/pom.xml
@@ -33,7 +33,7 @@
     <build>
         <plugins>
             <plugin>
-                <!--Download xsd for mets and mods-->
+                <!--Download xsd for mets-->
                 <groupId>com.googlecode.maven-download-plugin</groupId>
                 <artifactId>download-maven-plugin</artifactId>
                 <version>1.3.0</version>
@@ -47,18 +47,6 @@
                         <configuration>
                             <url>http://www.loc.gov/standards/mets/mets.xsd</url>
                             <outputFileName>mets.xsd</outputFileName>
-                            <outputDirectory>${project.build.directory}/downloaded-sources/xsd</outputDirectory>
-                        </configuration>
-                    </execution>
-                    <execution>
-                        <id>mods</id>
-                        <phase>generate-sources</phase>
-                        <goals>
-                            <goal>wget</goal>
-                        </goals>
-                        <configuration>
-                            <url>http://www.loc.gov/standards/mods/mods-3-7.xsd</url>
-                            <outputFileName>mods-3-7.xsd</outputFileName>
                             <outputDirectory>${project.build.directory}/downloaded-sources/xsd</outputDirectory>
                         </configuration>
                     </execution>
@@ -96,7 +84,7 @@
                 <executions>
                     <execution>
                         <phase>process-sources</phase>
-                        <id>metsModsKitodo</id>
+                        <id>metsKitodo</id>
                         <goals>
                             <goal>generate</goal>
                         </goals>
@@ -104,13 +92,11 @@
                             <extension>true</extension>
                             <schemaDirectory>target/downloaded-sources/xsd</schemaDirectory>
                             <schemaIncludes>
-                                <include>mods-3-7.xsd</include>
                                 <include>mets.xsd</include>
                                 <include>kitodo.xsd</include>
                             </schemaIncludes>
                             <bindingDirectory>src/main/resources/xjb</bindingDirectory>
                             <bindingIncludes>
-                                <include>mods-3-7.xjb</include>
                                 <include>mets.xjb</include>
                                 <include>kitodo.xjb</include>
                             </bindingIncludes>
