changed the download url for mets xsd to specific version

--- a/Kitodo-DataFormat/pom.xml
+++ b/Kitodo-DataFormat/pom.xml
@@ -45,7 +45,7 @@
                             <goal>wget</goal>
                         </goals>
                         <configuration>
-                            <url>http://www.loc.gov/standards/mets/mets.xsd</url>
+                            <url>http://www.loc.gov/standards/mets/version111/mets.xsd</url>
                             <outputFileName>mets.xsd</outputFileName>
                             <outputDirectory>${project.build.directory}/downloaded-sources/xsd</outputDirectory>
                         </configuration>
