--- a/Kitodo/src/test/resources/selenium/resources/kitodo_config.properties
+++ b/Kitodo/src/test/resources/selenium/resources/kitodo_config.properties
@@ -41,6 +41,8 @@ xsltFolder=../../../resourcess/xslt/
 # terminated by a directory separator ("/").
 # The servlet container must have write permission to that directory.
 MetadatenVerzeichnis=../../../resources/metadata/
+# directory to store BPMN diagrams
+diagramsFolder=../../../resources/diagrams/
 # Absolute path to the base directory of the users' home directories,
 # terminated by a directory separator ("/").
 # If a user accepts a task to work on which
