Add comments to diagramsFolder property in kitodo_config.properties

--- a/Kitodo/src/main/resources/kitodo_config.properties
+++ b/Kitodo/src/main/resources/kitodo_config.properties
@@ -45,7 +45,7 @@ dir_Users=/home/
 # Absolute path to a folder the application can temporarily create files in,
 # terminated by a directory separator ("/").
 tempfolder=/usr/local/kitodo/tmp/
-
+# Path to directory in which BPMN diagrams are stored
 diagramsFolder=/usr/local/kitodo/diagrams/
 # -----------------------------------
 # Directory management
