--- a/Kitodo/src/test/resources/selenium/resources/kitodo_config.properties
+++ b/Kitodo/src/test/resources/selenium/resources/kitodo_config.properties
@@ -41,7 +41,7 @@ xsltFolder=../../../resourcess/xslt/
 # terminated by a directory separator ("/").
 # The servlet container must have write permission to that directory.
 MetadatenVerzeichnis=../../../resources/metadata/
-# directory to store BPMN diagrams
+# Path to directory in which BPMN diagrams are stored
 diagramsFolder=../../../resources/diagrams/
 # Absolute path to the base directory of the users' home directories,
 # terminated by a directory separator ("/").
