add explanations to /javadoc and /site to address pull request comment https://github.com/kitodo/kitodo-production/pull/1422#discussion_r184387772

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 **/target/
 # Tests
 /Kitodo/modules
-# Javadoc
+# local build of Javadoc (cf. docs/javadoc/README.md)
 /javadoc
+# local build of docs with mkdocs
 /site
