changed to read path to xslt file from config core

--- a/Kitodo/src/main/resources/kitodo_config.properties
+++ b/Kitodo/src/main/resources/kitodo_config.properties
@@ -30,6 +30,9 @@ RegelsaetzeVerzeichnis=/usr/local/kitodo/rulesets/
 # binding units to digitise.
 # The path must be terminated by a directory separator ("/").
 xsltFolder=/usr/local/kitodo/xslt/
+# Filename of the XSLT file for transforming old metadata files which need to
+# be in the xslt folder above
+xsltFilenameMetadataTransformation=MetsModsGoobi_to_MetsKitodo.xsl
 # Absolute path to the directory that process directories will be created in,
 # terminated by a directory separator ("/").
 # The servlet container must have write permission to that directory.
