--- a/Kitodo/src/test/resources/kitodo_config.properties
+++ b/Kitodo/src/test/resources/kitodo_config.properties
@@ -13,6 +13,15 @@
 # The servlet container must have write permission to that directory.
 MetadatenVerzeichnis=src/test/resources/
 RegelsaetzeVerzeichnis=src/test/resources/
+# Absolute path to the directory that XSLT files are stored in which are used
+# to transform the "XML log" (as visible from the XML button in the processes
+# list) to a downloadable PDF docket which can be enclosed with the physical
+# binding units to digitise.
+# The path must be terminated by a directory separator ("/").
+xsltFolder=src/test/resources/xslt/
+# Filename of the XSLT file for transforming old metadata files which need to
+# be in the xslt folder above
+xsltFilenameMetadataTransformation=MetsModsGoobi_to_MetsKitodo.xsl
 # Path to directory in which BPMN diagrams are stored
 diagramsFolder=src/test/resources/diagrams/
 # Script to create the directory for a new process
