--- a/Kitodo/src/test/resources/selenium/resources/kitodo_config.properties
+++ b/Kitodo/src/test/resources/selenium/resources/kitodo_config.properties
@@ -37,6 +37,9 @@ RegelsaetzeVerzeichnis=../../../resources/rulesets/
 # binding units to digitise.
 # The path must be terminated by a directory separator ("/").
 xsltFolder=../../../resourcess/xslt/
+# Filename of the XSLT file for transforming old metadata files which need to
+# be in the xslt folder above
+xsltFilenameMetadataTransformation=MetsModsGoobi_to_MetsKitodo.xsl
 # Absolute path to the directory that process directories will be created in,
 # terminated by a directory separator ("/").
 # The servlet container must have write permission to that directory.
