--- a/Kitodo-FileManagement/src/test/resources/kitodo_config.properties
+++ b/Kitodo-FileManagement/src/test/resources/kitodo_config.properties
@@ -12,3 +12,10 @@
 # terminated by a directory separator ("/").
 # The servlet container must have write permission to that directory.
 MetadatenVerzeichnis=src/test/resources/
+moduleFolder=../Kitodo/modules/
+# user for create sym link script
+UserForImageReading=travis
+# Script to create a symbolic link in the user home directory and set
+# permissions for the user
+script_createSymLink=src/test/resources/scripts/script_createSymLink.sh
+script_deleteSymLink=src/test/resources/scripts/script_deleteSymLink.sh
