Add tests for Config in API module

--- a/Kitodo-API/pom.xml
+++ b/Kitodo-API/pom.xml
@@ -54,6 +54,12 @@
             <artifactId>tomcat-servlet-api</artifactId>
             <version>${tomcat.version}</version>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>${junit.version}</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 </project>
