Handle exceptions in configuration and add tests for it

--- a/Kitodo/src/test/resources/kitodo_config.properties
+++ b/Kitodo/src/test/resources/kitodo_config.properties
@@ -27,6 +27,8 @@ diagramsFolder=src/test/resources/diagrams/
 # Script to create the directory for a new process
 script_createDirMeta=src/test/resources/scripts/script_createDirMeta.sh
 script_createDirUserHome=src/test/resources/scripts/script_createDirUserHome.sh
+script_createSymLink=src/test/resources/scripts/script_createSymLink.sh
+script_deleteSymLink=src/test/resources/scripts/script_deleteSymLink.sh
 # Prefix for image names as regex.
 ImagePrefix=.*
 # -----------------------------------
