--- a/Kitodo/src/main/resources/mapping.json
+++ b/Kitodo/src/main/resources/mapping.json
@@ -107,6 +107,9 @@
                         }
                     },
                     "fielddata": true
+                },
+                "active": {
+                    "type": "boolean"
                 }
             }
         },
@@ -1030,6 +1033,9 @@
                         }
                     },
                     "fielddata": true
+                },
+                "active": {
+                    "type": "boolean"
                 }
             }
         }
