--- a/Kitodo/pom.xml
+++ b/Kitodo/pom.xml
@@ -827,7 +827,7 @@
                             </execution>
                         </executions>
                         <configuration>
-                            <mainClass>org.kitodo.demo.DemoRunner</mainClass>
+                            <mainClass>org.kitodo.demo.KitodoEnvironmentBuilder</mainClass>
                             <async>true</async>
                             <classpathScope>test</classpathScope>
                         </configuration>
