Update mapping to index workflows

--- a/Kitodo/src/main/resources/mapping.json
+++ b/Kitodo/src/main/resources/mapping.json
@@ -1038,6 +1038,40 @@
                     "type": "boolean"
                 }
             }
+        },
+        "workflow": {
+            "dynamic": "strict",
+            "properties": {
+                "title": {
+                    "type": "text",
+                    "fields": {
+                        "keyword": {
+                            "type": "keyword",
+                            "ignore_above": 256
+                        },
+                        "raw": {
+                            "type": "text",
+                            "index": false
+                        }
+                    },
+                    "fielddata": true
+                },
+                "fileName": {
+                    "type": "text",
+                    "fields": {
+                        "keyword": {
+                            "type": "keyword",
+                            "ignore_above": 256
+                        }
+                    }
+                },
+                "ready": {
+                    "type": "boolean"
+                },
+                "active": {
+                    "type": "boolean"
+                }
+            }
         }
     }
 }
